@@ -4,6 +4,9 @@ equational theorem prover.
 Version 3.1.0 -> 3.2.0 Puttabong Moondrop
 
 - Added support for $distinct
+- Disabled -xAuto and cut out most of the relics of the old auto-mode
+  stuff
+- Added option to select one of the built-in strategies
 
 Version 3.0.03 -> 3.1.0
 
